--- a/assets/css/custom-css.css
+++ b/assets/css/custom-css.css
@@ -1,7 +1,20 @@
+.motion-date{
+  font-size: 16px;
+  }
+.none{
+  display: none;
+}
 .main-container{
 	padding-top: 10%;
 }
-
+.navigation{
+  margin-bottom: 30px;
+}
+.rule{
+  font-weight: 900;
+    font-size: 18px;
+    cursor: pointer;
+}
 th{
 	font-size: 14px;
     font-weight: 900;
@@ -18,6 +31,9 @@ table, .createCategory-container, .document-add, .categories-home, .category-con
 }
 .categories-table .alert{
 margin-top: 20px;
+}
+.btn{
+  text-transform: none !important; 
 }
 .big-button{
 	padding: 0.5rem 1.5rem !important;
@@ -48,7 +64,7 @@ margin-top: 20px;
 }
 
 .active-list:after {
-  content: "\2212";
+  /*content: "\2212";*/
 }
 
 .list-panel {
@@ -152,4 +168,7 @@ table.sortable-table th.descending{
   font-weight: 900;
     font-size: 17px;
     cursor: pointer;
+}
+.margin-bottom-50{
+  margin-bottom: 50px;
 }
