--- a/assets/css/custom-css.css
+++ b/assets/css/custom-css.css
@@ -175,3 +175,29 @@ table.sortable-table th.descending{
 .margin-bottom-50{
   margin-bottom: 50px;
 }
+.borderless td, .borderless th {
+    border: none;
+    padding: 0.9rem 30px;
+    font-size: 15px;
+    font-weight: 900
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #d9534f; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #dc8f21; 
+}
